# jdol-celery-utils

./: README.md  pyproject.toml  requirements.txt  setup.py
jdol_celery_utils/: __init__.py  celery_app.py  config.toml
jdol_celery_utils/rs_data/: daily.py
jdol_celery_utils/trial/: demo.py
jdol_celery_utils/update_data/: daily.py
